# python-project-51

./: .codeclimate.yml  .coverage  .gitignore  .www-ujaen-es-cultura-y-deporte-deporte-ujagym-tu-gimnasio-en-ujaen.html.swp  Makefile  README.md  coverage.xml  pyproject.toml  requests-readthedocs-io-en-latest-user-quickstart-  setup.cfg
.github/workflows/: pyci.yml
mierda/: www-youtube-com.html
mierda/www-youtube-com_files/: www-youtube-com-opensearch-locale-es-ES.html  www-youtube-com-s---ytmainappweb---ss-k-ytmainappweb-kevlar-base-RbqIFEtMaQA-L-X-O-am-gAE-d-0-rs-AGKMywHmd2cnrxeTVBpyzDkE0-1XCbT2PQ.html  www-youtube-com-s-desktop-f06ee14b-cssbin-www-main-desktop-home-page-skeleton.css  www-youtube-com-s-desktop-f06ee14b-jsbin-webcomponents-all-noPatch-vflset-webcomponents-all-noPatch.js  www-youtube-com.html
page-loader/: loader.py
page_loader/: __init__.py  loader.py  logger.py  namer.py  page_loader.py  source_changer.py
page_loader/scripts/: cli.py  parser.py
tests/: test_download.py  test_exceptions.py  test_namer.py  test_sourcer.py
tests/fixtures/: expected_file.html  full_expected.html  full_fixture.html  img_fixture.html  new_file.html  source_file.html
