[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "CLI utility that downloads a web page and saves it as a file in indicated directory."
authors = ["algrince"]
packages = [
	{ include = 'page_loader'}, 
]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
requests = "^2.28.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
coverage = "^6.5.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.cli:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"